# ariane-xml

./: .dockerignore  .gitignore  CMakeLists.txt  DSN_COMPATIBILITY_ANALYSIS.md  DSN_MODE_DESIGN.md  Dockerfile  ENCRYPTION_MODULE.md  ENCRYPTION_QUICKSTART.md  ERROR_NUMBERING_SYSTEM.md  FOR_Keyword_DSN_Mode_Guide.md  FOR_Keyword_Guide.md  INSTALLATION.md  JUPYTER_DSN_INTEGRATION.md  JUPYTER_PERFORMANCE_ANALYSIS.md  KNOWN_ISSUES.md  MIGRATION_GUIDE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_NOTES_UNIFIED_ERRORS.md  Untitled.ipynb  ariane-xml-manager.sh  docker-compose.yml  encryption_config.example.yaml  error_catalog.yaml  examples  expocli.sh  install.sh  install_encryption_in_container.sh  test_dsn_sample.xml  test_formatting_overhead.py  test_kernel_performance.py  test_larger_dataset.py  test_realistic_formatting.py
.claude/: settings.local.json
ariane-xml-c-kernel/: CMakeLists.txt
ariane-xml-config/: VERSION_HISTORY.txt  dsn_detection.yml  encryption_config.example.yaml  jupyter_session_config.yaml  welcome.md
ariane-xml-crypto/: __init__.py  cli.py  config.py  encryptor.py  fpe.py  mapping_table.py  pseudonymizer.py  setup.py
ariane-xml-documentation/: 00_Documentation_Index.md  01a_Quick_Start_CLI.md  01b_Quick_Start_Jupyter.md  01c_Quick_Start_Encryption.md  02_Installation_Guide.md  04_Jupyter_Integration.md  04b_Jupyter_Technical_Analysis.md  04c_Jupyter_POC_Summary.md  04d_Jupyter_Enhancements.md  04e_Testing_Enhanced_Kernel.md  06_Encryption_Quick_Start.md  07_Encryption_Module.md  07b_Encryption_Implementation.md  07c_Encryption_Setup.md  08_Docker_Rebuild_Guide.md  08b_Docker_Proxy_Fix.md  10_Architecture_Diagram.md  11_Performance_Analysis.md  12_Codebase_Exploration_Summary.txt  13_Docker_Buildx_Setup.md  DSN_JUPYTER_UX_ENHANCEMENTS.md  DSN_MODE_P2_IMPLEMENTATION.md  DSN_MODE_P3_IMPLEMENTATION.md  JUPYTER_DSN_INTEGRATION.md
ariane-xml-examples/: 00_Getting_Started.ipynb  APP_DOCUMENTATION.md  EXAMPLES.md  Enhanced_Tables_Demo.ipynb  ExpoCLI_Demo.ipynb  books.xml  bookstore_branch1.xml  bookstore_main.xml  bookstore_schema.xsd  complex_schema.xsd  lunch.xml  products.xml  test_queries.sh
ariane-xml-jupyter-kernel/: README_ENHANCEMENTS.md  kernel.py  kernel_enhanced.py  requirements-kernel.txt  setup.py
ariane-xml-jupyter-sessions/: bookstore.xml  welcome.ipynb
ariane-xml-kernel/: __init__.py  kernel.py  kernel_enhanced.py  requirements-kernel.txt  setup.py
ariane-xml-scripts/: ariane-xml.sh  error_lookup.py  install.sh  install_crypto.sh  install_encryption_in_container.sh  install_kernel.sh  start-jupyter.sh
ariane-xml-tests/: .gitignore  DSN_TEST_README.md  QUICKSTART.md  README.md  Untitled.ipynb  dsn_test.sh  hard_test.sh  hardest_test.sh  run_tests.sh  test_autocomplete_bridge.sh  test_backward_compatibility.sh  test_helpers.sh  test_kernel.py  test_kernel_autocomplete.py  test_kernel_dsn.py  test_partial_paths.sh  test_verbose.sh
docs/: LIST_COMMAND.md
examples/: APP_DOCUMENTATION.md  Enhanced_Tables_Demo.ipynb  test_schema.xsd
expocli_crypto/: __init__.py  cli.py  config.py  encryptor.py  fpe.py  mapping_table.py  setup.py  setup_crypto.py
expocli_documentation/: 00_Documentation_Index.md  01a_Quick_Start_CLI.md  01b_Quick_Start_Jupyter.md  01c_Quick_Start_Encryption.md  02_Installation_Guide.md  04_Jupyter_Integration.md  (+14 more)
(+272 files in other folders)
